--- a/cuatrix-hris/src/index.html
+++ b/cuatrix-hris/src/index.html
@@ -1,1 +1,16 @@
-<div id="root"></div>
+<!DOCTYPE html>
+<html lang = "en">
+    <head>
+        <meta charset = "utf-8">
+        <title>Cuatrix Management</title>
+        <style type = "text/css">
+            * {
+                font-family: Tahoma;
+            }
+        </style>
+    </head>
+
+    <body>  
+        
+    </body>
+</html>
