--- a/cuatrix-hris/src/index.html
+++ b/cuatrix-hris/src/index.html
@@ -9,6 +9,7 @@
                 font-family: Tahoma;
             }
         </style>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     </head>
 
     <body>  
